--- a/src/GridLike/Pages/Index.razor
+++ b/src/GridLike/Pages/Index.razor
@@ -1,9 +1,9 @@
 @page "/"
 @using MudBlazor
 @using GridLike.Services
-@using GridLike.Data.Views
 @using System.Threading
 @using System.Reactive.Linq
+@using GridLike.Models.Views
 @using GridLike.Services.Storage
 
 @implements IDisposable
